# my-first-projects

./: .gitignore  LICENSE  README.md  archivr1.py  pyproject.toml
src/simple_crypto/: __init__.py  __main__.py  core.py  gui_qt.py
src/simple_crypto_byte.egg-info/: SOURCES.txt  top_level.txt
